# stroids

./: .gitignore  Cargo.toml  README.md
files/sprites/: asteroid-lg.aseprite  asteroid-md.aseprite  asteroid-sm.aseprite  ship.aseprite
src/: asteroid.rs  constants.rs  hull.rs  level.rs  main.rs  physics.rs  player.rs  scoring.rs  ui.rs
